--- a/index.html
+++ b/index.html
@@ -45,9 +45,65 @@
             <p class="scroll-title">Scroll Down</p>
             <button class="scroll-btn"><i class="fas fa-chevron-down"></i></button>
         </div>
+        <div class="background"></div>
     </header>
-
-
+    <section class="about">
+        <div class="about-heading">
+            <h2 class="about-heading__title">We Are An Awesome Agency
+            </h2>
+            
+        </div>
+        <div class="about-cards row">
+            <div class="about-cards__card col-lg-3">
+                <div class="about-cards__card-icon">
+                    <i></i>
+                </div>
+                <div class="about-cards__card-text">
+                    <h3 class="about-cards__card-text__heading">Feature one</h3>
+                    <p class="about-cards__card-text__p">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea,
+                        facilis facere totam odit voluptas culpa quo tenetur, officiis reprehenderit magnam iure
+                        voluptatem doloremque, cum illo optio accusantium sunt. Iste, rerum?</p>
+                </div>
+            </div>
+            <div class="about-cards__card col-lg-3">
+                <div class="about-cards__card-icon">
+                    <i></i>
+                </div>
+                <div class="about-cards__card-text">
+                    <h3 class="about-cards__card-text__heading">Feature two</h3>
+                    <p class="about-cards__card-text__p">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, facilis facere totam odit voluptas
+                        culpa quo tenetur, officiis reprehenderit magnam iure voluptatem doloremque, cum illo optio
+                        accusantium sunt. Iste, rerum?</p>
+                </div>
+            </div>
+            <div class="about-cards__card col-lg-3">
+                <div class="about-cards__card-icon">
+                    <i></i>
+                </div>
+                <div class="about-cards__card-text">
+                    <h3 class="about-cards__card-text__heading">Feature three</h3>
+                    <p class="about-cards__card-text__p">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea,
+                        facilis facere totam odit voluptas culpa quo tenetur, officiis reprehenderit magnam iure
+                        voluptatem doloremque, cum illo optio accusantium sunt. Iste, rerum?</p>
+                </div>
+            </div>
+            <div class="about-cards__card col-lg-3">
+                <div class="about-cards__card-icon">
+                    <i></i>
+                </div>
+                <div class="about-cards__card-text">
+                    <h3 class="about-cards__card-text__heading">Feature Four</h3>
+                    <p class="about-cards__card-text__p">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea,
+                        facilis facere totam odit voluptas culpa quo tenetur, officiis reprehenderit magnam iure
+                        voluptatem doloremque, cum illo optio accusantium sunt. Iste, rerum?</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="links">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
             from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
